--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bleach==2.1.3
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
+chromedriver-installer==0.0.6
 constantly==15.1.0
 cryptography==2.3
 cssselect==1.0.3
