--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ dateparser==0.7.0
 arrow==0.12.1
 html2text==2018.1.9
 beautifulsoup4==4.6.3
+botocore
 boto3==1.8.1
 parsel==1.5.0
 scrapy_proxies==0.4
