--- a/requirements.txt
+++ b/requirements.txt
@@ -82,4 +82,4 @@ parsel==1.5.0
 scrapy_proxies==0.4
 firebase-admin==2.13.0
 langdetect==1.0.7
-chromedriver-installer==0.0.6
+# chromedriver-installer==0.0.6
